[gd_scene load_steps=6 format=3 uid="uid://ddy770goe0o1s"]

[ext_resource type="Script" path="res://Scenes/Guessing/guessing_screen.gd" id="1_b7lda"]
[ext_resource type="PackedScene" uid="uid://ctd8k6cgrbqce" path="res://UI/peek_canvas.tscn" id="1_txvvl"]

[sub_resource type="Theme" id="Theme_ue6n6"]
default_font_size = 40

[sub_resource type="Theme" id="Theme_fctk4"]
default_font_size = 50

[sub_resource type="Theme" id="Theme_yaoji"]
default_font_size = 200

[node name="GuessingScreen" type="Node2D"]
script = ExtResource("1_b7lda")

[node name="Panel" type="Panel" parent="."]
offset_left = 561.0
offset_top = 33.0
offset_right = 1360.0
offset_bottom = 102.0

[node name="TimeLeft" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 700.0
offset_top = 10.0
offset_right = 786.0
offset_bottom = 67.0
theme = SubResource("Theme_ue6n6")
text = "00s"

[node name="PeekTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="PeekCanvas" parent="." instance=ExtResource("1_txvvl")]
offset_left = 2.0
offset_top = 2.0
offset_right = 1918.0
offset_bottom = 1081.0

[node name="Panel2" type="Panel" parent="."]
visible = false
offset_left = 738.0
offset_top = 772.0
offset_right = 1228.0
offset_bottom = 972.0

[node name="GuessInpug" type="LineEdit" parent="Panel2"]
layout_mode = 0
offset_left = 70.0
offset_top = 126.0
offset_right = 425.0
offset_bottom = 203.0

[node name="Label" type="Label" parent="Panel2"]
layout_mode = 0
offset_left = 33.0
offset_top = 29.0
offset_right = 474.0
offset_bottom = 98.0
theme = SubResource("Theme_fctk4")
text = "guess the drawing"

[node name="YOU WIN!" type="Label" parent="."]
visible = false
offset_left = 441.0
offset_top = 233.0
offset_right = 1543.0
offset_bottom = 506.0
theme = SubResource("Theme_yaoji")
theme_override_colors/font_color = Color(0, 0.866667, 0, 1)
text = "YOU WIN!!!!"

[node name="ANSWER" type="Label" parent="."]
offset_left = 602.0
offset_top = 58.0
offset_right = 677.0
offset_bottom = 81.0
text = "ANSWER: "

[connection signal="timeout" from="PeekTimer" to="." method="_on_peek_timer_timeout"]
[connection signal="text_changed" from="Panel2/GuessInpug" to="." method="_on_guess_inpug_text_changed"]
